showed how to use api

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <input type="text">
     <button>click for pokemon</button>
+    <h2>Use https://cracked-pokemon-api-98d24f1abd86.herokuapp.com for api</h2>
     <h2></h2>
 </body>
 </html>
